crates/syntax/src/snapshots/syntax__grammar__tests__class-3.snap
---
source: crates/syntax/src/grammar.rs
expression: "parse(\"class\")"
---
Parse {
    root_node: SourceFile@0..5
      StatementList@0..5
        Class@0..5
          ClassKw@0..5 "class"
          Identifier@5..5
          RecordBody@5..5
            ParentClassList@5..5
            Body@5..5
    ,
    errors: [
        SyntaxError {
            range: 5..5,
            message: "expected class name after 'class' keyword",
        },
    ],
}
