crates/syntax/src/snapshots/syntax__grammar__tests__class_ref-2.snap
---
source: crates/syntax/src/grammar.rs
expression: "parse(\"class Foo : Bar<A = 1>;\")"
---
(
    SourceFile@0..23
      StatementList@0..23
        Class@0..23
          ClassKw@0..5 "class"
          Whitespace@5..6 " "
          Identifier@6..10
            Id@6..9 "Foo"
            Whitespace@9..10 " "
          RecordBody@10..23
            ParentClassList@10..22
              Colon@10..11 ":"
              Whitespace@11..12 " "
              ClassRef@12..22
                Identifier@12..15
                  Id@12..15 "Bar"
                Less@15..16 "<"
                ArgValueList@16..21
                  NamedArgValue@16..21
                    Value@16..18
                      InnerValue@16..18
                        Identifier@16..18
                          Id@16..17 "A"
                          Whitespace@17..18 " "
                    Equal@18..19 "="
                    Whitespace@19..20 " "
                    Value@20..21
                      InnerValue@20..21
                        Integer@20..21
                          IntVal@20..21 "1"
                Greater@21..22 ">"
            Body@22..23
              Semi@22..23 ";"
    ,
    [],
)
