crates/syntax/src/snapshots/syntax__grammar__tests__def.snap
---
source: crates/syntax/src/grammar.rs
expression: "parse(\"def Foo : Bar;\")"
---
Parse {
    root_node: Root@0..14
      StatementList@0..14
        Def@0..14
          DefKw@0..3 "def"
          Whitespace@3..4 " "
          Value@4..8
            InnerValue@4..8
              Identifier@4..8
                Id@4..7 "Foo"
                Whitespace@7..8 " "
          RecordBody@8..14
            ParentClassList@8..13
              Colon@8..9 ":"
              Whitespace@9..10 " "
              ClassRef@10..13
                Identifier@10..13
                  Id@10..13 "Bar"
            Body@13..14
              Semi@13..14 ";"
    ,
    errors: [],
}
