crates/syntax/src/snapshots/syntax__grammar__tests__defm.snap
---
source: crates/syntax/src/grammar.rs
expression: "parse(\"defm foo : bar;\")"
---
Parse {
    root_node: SourceFile@0..15
      StatementList@0..15
        Defm@0..15
          DefmKw@0..4 "defm"
          Whitespace@4..5 " "
          Value@5..9
            InnerValue@5..9
              Identifier@5..9
                Id@5..8 "foo"
                Whitespace@8..9 " "
          ParentClassList@9..14
            Colon@9..10 ":"
            Whitespace@10..11 " "
            ClassRef@11..14
              Identifier@11..14
                Id@11..14 "bar"
          Semi@14..15 ";"
    ,
    errors: [],
}
